--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,75 +1,27 @@
-# This file is auto-generated from environment.yml, do not modify.
-# See that file for comments about the need/usage of each dependency.
-
-numpy>=1.15
-python-dateutil>=2.6.1
-pytz
-asv
-cython>=0.29.13
-black==19.10b0
-cpplint
-flake8
-flake8-comprehensions>=3.1.0
-flake8-rst>=0.6.0,<=0.7.0
-isort
-mypy==0.730
-pycodestyle
-gitpython
-gitdb2==2.0.6
-sphinx
-numpydoc>=0.9.0
-nbconvert>=5.4.1
-nbsphinx
-pandoc
-dask
-toolz>=0.7.3
-fsspec>=0.5.1
-partd>=0.3.10
-cloudpickle>=0.2.1
-markdown
-feedparser
-pyyaml
-requests
-boto3
-botocore>=1.11
-hypothesis>=3.82
-moto
-pytest>=5.0.1
-pytest-cov
-pytest-xdist>=1.21
-pytest-asyncio
-seaborn
-statsmodels
-ipywidgets
-nbformat
-notebook>=5.7.5
-pip
-blosc
-bottleneck>=1.2.1
-ipykernel
-ipython>=7.11.1
-jinja2
-matplotlib>=2.2.2
-numexpr>=2.6.8
-scipy>=1.1
-numba>=0.46.0
-beautifulsoup4>=4.6.0
-html5lib
-lxml
-openpyxl<=3.0.1
-xlrd
-xlsxwriter
-xlwt
-odfpy
-fastparquet>=0.3.2
-pyarrow>=0.13.1
-python-snappy
-pyqt5>=5.9.2
-tables>=3.4.2
-s3fs
-sqlalchemy
-xarray
-cftime
-pyreadstat
-tabulate>=0.8.3
-git+https://github.com/pandas-dev/pydata-sphinx-theme.git@master
+beautifulsoup4==4.10.0
+blosc==1.10.6
+bottleneck==1.3.2
+cftime==1.5.1.1
+fastparquet==0.7.2
+html5lib==1.1
+hypothesis==6.35.0
+jinja2==3.0.3
+lxml==4.7.1
+matplotlib==2.2.5
+numba==0.54.1
+numexpr==2.8.1
+odfpy==1.4.1
+openpyxl==3.0.1
+pyarrow==6.0.1
+python-dateutil==2.8.1
+pytest==6.2.5
+pytest-cov==3.0.0
+pytest-xdist==2.5.0
+pytest-asyncio==0.16.0
+pyxlsb==1.0.9
+scipy==1.7.3
+tables==3.6.1
+xarray==0.20.2
+xlrd==1.2.0
+xlsxwriter==3.0.2
+xlwt==1.3.0
